[tool.poetry]
name = "fe-openedx-alerts"
version = "0.0.2"
description = ""
authors = ["Fernando Espíndola <fer.esp@gmail.com>"]
readme = "README.md"
packages = [{include = "fe_openedx_alerts"}]

[tool.poetry.dependencies]
python = "^3.9"
twilio = "^7.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
